--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
             </div>
             <div class="hero-image">
                 <div class="profile-container">
-                    <img src="https://raw.githubusercontent.com/idoooyyyy33/idoooyyyy33.github.io/main/image1.jpg" alt="Annas Ridho Sadila" class="profile-img">
+                    <img src="https://raw.githubusercontent.com/idoooyyyy33/idoooyyyy33.github.io/main/image2.png" alt="Annas Ridho Sadila" class="profile-img">
                     <div class="profile-decoration decoration-1"></div>
                     <div class="profile-decoration decoration-2"></div>
                 </div>
